<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="?android:colorBackground">

        <TextView
                android:id="@+id/usdRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_rate"
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary" />

        <TextView
                android:id="@+id/eurRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eur_rate"
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary" />

        <TextView
                android:id="@+id/rubRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rub_rate"
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary" />

        <Button
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textColor="?android:textColorPrimary"
                android:backgroundTint="?attr/colorPrimary" />

    </LinearLayout>
</layout>
