<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="?android:colorBackground">

        <RadioGroup
                android:id="@+id/radioGroupTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/radioLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_theme"
                    android:textColor="?android:textColorPrimary" />

            <RadioButton
                    android:id="@+id/radioDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme"
                    android:textColor="?android:textColorPrimary" />
        </RadioGroup>

        <RadioGroup
                android:id="@+id/radioGroupLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <RadioButton
                    android:id="@+id/radioEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="?android:textColorPrimary" />

            <RadioButton
                    android:id="@+id/radioRussian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/russian"
                    android:textColor="?android:textColorPrimary" />
        </RadioGroup>

        <CheckBox
                android:id="@+id/checkBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_balance"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="16dp"/>
    </LinearLayout>
</layout>
