<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="?android:attr/colorBackground">

        <TextView
                android:id="@+id/operationType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_type"
                android:textColor="?android:textColorPrimary" />

        <TextView
                android:id="@+id/operationAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_amount"
                android:textColor="?android:textColorPrimary" />

        <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="?android:textColorPrimary"
                android:backgroundTint="?attr/colorPrimary" />
    </LinearLayout>
</layout>
