<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".presentation.ui.currencyconverter.CurrencyConverterFragment">

    <data>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="?android:colorBackground">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/currencyRatesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_converter"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:textColor="?android:textColorPrimary" />

            <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_amount"
                    android:inputType="numberDecimal"
                    android:paddingBottom="16dp"
                    android:autofillHints=""
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorSecondary" />

            <Spinner
                    android:id="@+id/fromCurrencySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp" />

            <Spinner
                    android:id="@+id/toCurrencySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp" />

            <Button
                    android:id="@+id/convertButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/convert"
                    android:paddingBottom="5dp"
                    android:textColor="?android:textColorPrimary"
                    android:backgroundTint="?attr/colorPrimary"
                    android:gravity="center"/>

            <TextView
                    android:id="@+id/resultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:textColor="?android:textColorPrimary" />
        </LinearLayout>
    </ScrollView>
</layout>
