<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="?attr/colorSurface">

        <RadioGroup
                android:id="@+id/typeRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                    android:id="@+id/radioAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textColor="?attr/android:textColorPrimary"/>

            <RadioButton
                    android:id="@+id/radioIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="?attr/android:textColorPrimary"/>

            <RadioButton
                    android:id="@+id/radioExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textColor="?attr/android:textColorPrimary"/>
        </RadioGroup>

        <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/typeRadioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:textColor="?attr/android:textColorPrimary"
                android:spinnerMode="dropdown"
                android:paddingBottom="16dp"/>

        <Spinner
                android:id="@+id/periodSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/categorySpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="?attr/android:textColorPrimary"
                android:spinnerMode="dropdown"
                android:paddingBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>